# HW-Scoring-API

./: README.md  pyproject.toml
.github/actions/: install-dependecies.yml  set-up-python.yml
.github/workflows/: analyser-ci.yml
src/: api.py  scoring.py  test.py
tests/: test.py
